# hex

./: CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  config.py  wscript
src/h3x/: dump.hpp  wscript_build
src/hex/: dump.hpp  wscript_build
src/hexdump/: hexdump.hpp  hexdump.hpp~  wscript_build  wscript_build~
test/: hex_test.cpp  wscript_build
test/src/: test_dump.cpp  test_hexdump.cpp
